--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+doctype html
 html(lang="en")
 head
   meta(charset="UTF-8")
   title WOD to SMS
   link(href='https://fonts.googleapis.com/css?family=Open+Sans:500%7CRoboto' rel='stylesheet')
   link(href='/css/styles.css' rel='stylesheet')
+  script(src="/js/client.js")
 body
   .container
     header.section
@@ -12,14 +13,17 @@ body
 
     section.section.section--centered-vertical
       header.header.header--shorter-bottom
-        h4 Phone number format: X-XXX-XXX-XXXX
+        h4 Phone number format: 1-808-321-1234
 
       form.form
         input.form__email(
+          value='1-808-321-1234'
           name='phone-number'
           type='text'
           placeholder='📞 enter your phone number here  👍'
           required)
-        button.form__submit.copy--uppercase.copy--faint subscribe
+        input.form__submit.copy.copy--uppercase.copy--faint(
+          type='submit'
+          value='subscribe')
 
     footer.section.footer
