--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,7 @@ head
 body
   .container
     header.section
-      h1.copy--centered WOD to 📱
+      h1.copy--centered 🏋 to 📱
 
     section.section.section--centered-vertical
       header.header.header--shorter-bottom
@@ -17,7 +17,6 @@ body
 
       form.form
         input.form__email(
-          value='1-808-321-1234'
           name='phone-number'
           type='text'
           placeholder='📞 enter your phone number here  👍'
