✨ adds some form validation

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,6 +24,10 @@ body {
   min-height: 100%;
 }
 
+.hidden {
+  visibility: hidden;
+}
+
 .container {
   display: flex;
   flex-flow: column nowrap;
@@ -32,7 +36,7 @@ body {
 
 .header {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
   margin: 2.5em;
@@ -65,6 +69,10 @@ body {
     padding: 2em;
     border: 1px solid #ddd;
   }
+}
+
+.error-message {
+  margin: 0;
 }
 
 .copy {
