--- a/views/index.pug
+++ b/views/index.pug
@@ -15,6 +15,8 @@ html(lang="en")
         header.header.header--shorter-bottom
           h4 Phone number format: 1-808-321-1234
 
+          p.hidden.error-message Invalid Phone number format
+
         form.form
           input.form__email(
             name='phone-number'
