--- a/views/index.pug
+++ b/views/index.pug
@@ -1,11 +1,12 @@
 doctype html
-html(lang="en")
+html(lang='en')
   head
-    meta(charset="UTF-8")
+    meta(charset='UTF-8')
+    meta(name='format-detection' content='telephone=no')
     title WOD to SMS
     link(href='https://fonts.googleapis.com/css?family=Open+Sans:500%7CRoboto' rel='stylesheet')
     link(href='/css/styles.css' rel='stylesheet')
-    script(src="/js/client.js")
+    script(src='/js/client.js')
   body
     .container
       header.section
