--- a/views/thank-you.pug
+++ b/views/thank-you.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
   head
     meta(charset="UTF-8")
+    meta(name='format-detection' content='telephone=no')
     title WOD to SMS
     link(href='https://fonts.googleapis.com/css?family=Open+Sans:500%7CRoboto' rel='stylesheet')
     link(href='/css/styles.css' rel='stylesheet')
